--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         
         <div class="gift-section">
             <h2 class="gift-title">Let's celebrate 4 decades!</h2>
-            <h3 class="gift-hint">(Hover over the gift)</h3>
+            <h3 class="gift-hint">(Hover/click the gift)</h3>
             <div class="gift-img" id="gift-img-confetti"></div>
         </div>
         
